style: Fix input style in dark mode with adding border

--- a/components/forms/style.css
+++ b/components/forms/style.css
@@ -109,3 +109,7 @@ i.bx.wideOnly {
 .stepper div.activeStep p {
   background: var(--color);
 }
+/* --------------------------------------- */
+.input-content input,textarea{
+  border: 1px solid 
+}
